# fastapi-boilerplate

./: .env  README.md  docker-compose.dev.yml
backend/app/: .python-version  pyproject.toml
backend/app/alembic/: env.py
backend/app/alembic/versions/: bb30b87f308d_first.py
backend/app/app/: main.py
backend/app/app/api/: deps.py
backend/app/app/api/api_v1/: api.py
backend/app/app/api/api_v1/endpoints/: login.py  users.py
backend/app/app/core/: settings.py
backend/app/app/crud/: base.py  crud_user.py
backend/app/app/db/: init_db.py  session.py
