[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Xuan Hien <hiennguyen9874@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "^0.15.0"
fastapi = "^0.70.0"
python-multipart = "^0.0.5"
email-validator = "^1.1.3"
requests = "^2.26.0"
celery = "^5.1.2"
passlib = "^1.7.4"
bcrypt = "^3.2.0"
tenacity = "^8.0.1"
pydantic = "^1.8.2"
emails = "^0.6"
gunicorn = "^20.1.0"
Jinja2 = "^3.0.2"
alembic = "^1.7.4"
SQLAlchemy = "^1.4.26"
psycopg2-binary = "^2.9.1"
sentry-sdk = "^1.4.3"
redis = "^3.5.3"
fastapi-jwt-auth = {extras = ["asymmetric"], version = "^0.5.0"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
